--- a/style.css
+++ b/style.css
@@ -1,20 +1,30 @@
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  margin-top: 50px;
+  padding: 0;
+  background: rgb(255, 0, 0);
+  display: flex;
+  flex-flow: column nowrap;
+}
+
 header 
 {
-
-    position: fixed;
-    width: 100%;
-    background-color: rgb(213, 127, 65);
-    height : 50px;
-    top : 0;
-    
-    
+  position: fixed;
+  width: 100%;
+  background-color: rgb(213, 127, 65);
+  height : 50px;
+  top : 0;    
 }
+
 nav {
   display: flex;
 
   justify-content: space-between;
   
 }
+
 nav a {
   text-decoration: none;
   border: solid rgb(213, 127, 65) 3px;
@@ -29,12 +39,6 @@ nav a:hover {
   border-color: white;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  background: rgb(255, 0, 0);
-}
-
 .ElementsPizza {
   display: flex;
   justify-content: center;
@@ -44,7 +48,7 @@ body {
 section {
   display: flex;
   flex-direction: column;     
-  background: #b31217;
+  background: #d50007;
   color: white;
   padding: 20px;
   text-align: center;
@@ -81,9 +85,11 @@ section {
 }
 
 .TitreSection {
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
   text-align: center;
-  margin-bottom : -80px;
-  margin-top: 10 px;
+  margin-bottom : 80px;
+  margin-top: 10 px;  
 }
 
 #Avis {
@@ -98,9 +104,8 @@ section {
   align-items: center;
   flex-direction: column;
   border: solid red;
-  padding: 10px
-
-  
+  padding: 20px;
+  min-width: 200px;
 }
 .pfp {
   width: 100px;
@@ -109,11 +114,14 @@ section {
   margin-bottom: 10px;
 }
 
-
-
 .pfp img {
   width: 100%;
   height: 100%;
+}
+
+.user{
+  margin: 2px;
+  font-weight: bold;
 }
 
 #noteM {
@@ -136,7 +144,7 @@ section {
 footer {
   color: olive;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   background-color: rgb(32, 32, 33);
-  padding: 50px;
+  padding: 10px;
 }
