--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+
 body {
   height: 100%;
   width: 100%;
   margin: 0;
-  margin-top: 50px;
+  margin-top: 65px;
   padding: 0;
   background: rgb(255, 0, 0);
   display: flex;
@@ -14,15 +16,24 @@ header
   position: fixed;
   width: 100%;
   background-color: rgb(213, 127, 65);
-  height : 50px;
-  top : 0;    
+  height : fit-content;
+  top : 0;
+  padding: 10px 20px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#titre{
+  font-family: 'Dancing Script', 'Times New Roman', Times, serif;
+  margin: 0%;
 }
 
 nav {
   display: flex;
-
   justify-content: space-between;
-  
+  margin-right: 20px;
 }
 
 nav a {
@@ -33,6 +44,7 @@ nav a {
   background-color: rgb(213, 127, 65);
   color: rgb(0, 108, 4) ;
   text-underline-offset: inherit;
+  margin-right: 10px;
 }
 nav a:hover {
   background-color: white;
@@ -49,10 +61,9 @@ section {
   display: flex;
   flex-direction: column;     
   background: #d50007;
-  color: white;
+  color: beige;
   padding: 20px;
   text-align: center;
-  margin-top: 100px;
   gap: 10px
 }
 
@@ -83,11 +94,9 @@ section {
 }
 
 .TitreSection {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Dancing Script', 'Times New Roman', Times, serif;
   font-style: italic;
   text-align: center;
-  margin-bottom : 80px;
-  margin-top: 10 px;  
 }
 
 #Avis {
