--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ nav a:hover {
   align-items: center;
 }
 
-section {
+.section {
   display: flex;
   flex-direction: column;     
   background: #d50007;
